--- a/index (1).html
+++ b/index (1).html
@@ -2,8 +2,9 @@
 <html>
 <head>
 	<meta charset="UTF-8" />
-	<title>Phaser Basic Project Template</title>
-	<script src="phaser.min.js"></script>
+	<title>Lemonade Tycoon JS</title>
+	<script src="libs/phaser.min.js"></script>
+	<script src="libs/peanut.js"></script>
 	<script src="Boot.js"></script>
 	<script src="Preloader.js"></script>
 	<script src="MainMenu.js"></script>
