--- a/index..html
+++ b/index..html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8" />
 	<title>Lemonade Tycoon JS</title>
 	<script src="libs/phaser.min.js"></script>
-	<script src="libs/peanut.js"></script>
+	<script src="libs/peanut.min.js"></script>
 	<script src="Boot.js"></script>
 	<script src="Preloader.js"></script>
 	<script src="MainMenu.js"></script>
